--- a/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
+++ b/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="12.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup Label="Globals">
     <NuGetPackageImportStamp>efc3bd94</NuGetPackageImportStamp>
@@ -87,6 +87,7 @@
     <ClCompile Include="..\..\..\..\src\formats\base64.cpp" />
     <ClCompile Include="..\..\..\..\src\formats\base85.cpp" />
     <ClCompile Include="..\..\..\..\src\math\checksum.cpp" />
+    <ClCompile Include="..\..\..\..\src\math\crypto.cpp" />
     <ClCompile Include="..\..\..\..\src\math\ec_keys.cpp" />
     <ClCompile Include="..\..\..\..\src\math\external\hmac_sha256.c" />
     <ClCompile Include="..\..\..\..\src\math\external\hmac_sha512.c" />
@@ -160,6 +161,7 @@
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\formats\base64.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\formats\base85.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\math\checksum.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\math\crypto.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\math\ec_keys.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\math\hash.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\math\hash_number.hpp" />
