Rename peer_to_peer to initiator, and connector.start to .connect.

--- a/Makefile.am
+++ b/Makefile.am
@@ -113,7 +113,7 @@ src_libbitcoin_la_SOURCES = \
     src/network/connector.cpp \
     src/network/handshake.cpp \
     src/network/hosts.cpp \
-    src/network/peer_to_peer.cpp \
+    src/network/initiator.cpp \
     src/network/protocol.cpp \
     src/network/protocol_address.cpp \
     src/network/protocol_ping.cpp \
@@ -340,7 +340,7 @@ include_bitcoin_bitcoin_network_HEADERS = \
     include/bitcoin/bitcoin/network/connector.hpp \
     include/bitcoin/bitcoin/network/handshake.hpp \
     include/bitcoin/bitcoin/network/hosts.hpp \
-    include/bitcoin/bitcoin/network/peer_to_peer.hpp \
+    include/bitcoin/bitcoin/network/initiator.hpp \
     include/bitcoin/bitcoin/network/protocol.hpp \
     include/bitcoin/bitcoin/network/protocol_address.hpp \
     include/bitcoin/bitcoin/network/protocol_ping.hpp \
